Post: 오라클 x 미 에너지부(DOE): 국가 AI 인프라의 새로운 기원 '제네시스 미션' 가동

--- a/_posts/2025-12-19-오라클-x-미-에너지부doe-국가-ai-인프라의-새로운-기원-제네시스-미션-가동.md
+++ b/_posts/2025-12-19-오라클-x-미-에너지부doe-국가-ai-인프라의-새로운-기원-제네시스-미션-가동.md
@@ -5,7 +5,7 @@ date: 2025-12-19 15:00:00 +0900
 categories: [AI, Infrastructure, Policy]
 tags: [Oracle, DOE, Genesis Mission, AI Sovereignty, Cloud Computing]
 author: Jaden
-featured_image: header.png
+featured_image: https://raw.githubusercontent.com/jeonghun-project/general-blog/main/assets/images/2025-12-19-오라클-x-미-에너지부doe-국가-ai-인프라의-새로운-기원-제네시스-미션-가동-featured.png
 ---
 
 ## 🇺🇸 미국 정부가 선택한 파트너, 왜 오라클(Oracle)인가?
@@ -16,7 +16,7 @@ featured_image: header.png
 
 이번 파트너십의 핵심은 **초거대 AI와 슈퍼컴퓨팅의 물리적 결합**입니다. 지금까지 연구소마다 파편화되어 있던 슈퍼컴퓨터, 실험 시설, 그리고 방대한 데이터셋을 오라클의 클라우드 인프라 위에서 하나로 연결하겠다는 야심 찬 계획입니다.
 
-![Cinematic shot of a massive, modern server room corridor, warm amber lighting contrasting with cool server lights, shallow depth of field, 35mm film grain, editorial photography style. No text, no floating holograms.](section_01.png)
+![Cinematic shot of a massive, modern server room corridor, warm amber lighting contrasting with cool server lights, shallow depth of field, 35mm film grain, editorial photography style. No text, no floating holograms.](https://raw.githubusercontent.com/jeonghun-project/general-blog/main/assets/images/2025-12-19-오라클-x-미-에너지부doe-국가-ai-인프라의-새로운-기원-제네시스-미션-가동-section-01.png)
 
 ### 💡 제네시스 미션(Genesis Mission): 점(Dot)을 선(Line)으로
 
@@ -39,7 +39,7 @@ featured_image: header.png
 2.  **베어메탈(Bare Metal) 성능**: AI 학습과 과학 시뮬레이션에는 가상화 오버헤드가 없는 '베어메탈' 인스턴스가 필수적입니다. 오라클은 이 분야에서 경쟁사 대비 높은 가성비를 자랑합니다.
 3.  **OCI Supercluster**: 수만 개의 NVIDIA GPU를 병렬로 연결하는 오라클의 슈퍼클러스터 기술은 DOE의 거대 모델을 돌리기에 최적화되어 있습니다.
 
-![Close up shot of heavy industrial copper cables connecting into a server rack, dust particles in the air, dramatic side lighting, realistic texture, macro photography, 85mm lens.](section_02.png)
+![Close up shot of heavy industrial copper cables connecting into a server rack, dust particles in the air, dramatic side lighting, realistic texture, macro photography, 85mm lens.](https://raw.githubusercontent.com/jeonghun-project/general-blog/main/assets/images/2025-12-19-오라클-x-미-에너지부doe-국가-ai-인프라의-새로운-기원-제네시스-미션-가동-section-02.png)
 
 ---
 
@@ -58,7 +58,7 @@ featured_image: header.png
 
 지금은 기술이 국력이 되는 시대입니다. 오라클과 에너지부의 동행이 어떤 결과를 낳을지, 시장은 숨죽여 지켜보고 있습니다.
 
-![Wide shot of a scientists working in a control room looking at data on screens, authentic candid moment, dim lighting, cinematic color grading, lived-in atmosphere, slightly grainy.](section_03.png)
+![Wide shot of a scientists working in a control room looking at data on screens, authentic candid moment, dim lighting, cinematic color grading, lived-in atmosphere, slightly grainy.](https://raw.githubusercontent.com/jeonghun-project/general-blog/main/assets/images/2025-12-19-오라클-x-미-에너지부doe-국가-ai-인프라의-새로운-기원-제네시스-미션-가동-section-03.png)
 
 ### YouTube Shorts Script (Veo 3.1)
 
