Post: [속보] 檢, 윤석열 전 대통령에 사형 구형... 2월 19일 '운명의 날

--- a/_posts/2026-01-14-속보--윤석열-전-대통령에-사형-구형-2월-19일-운명의-날.md
+++ b/_posts/2026-01-14-속보--윤석열-전-대통령에-사형-구형-2월-19일-운명의-날.md
@@ -2,10 +2,10 @@
 title: "[속보] 檢, 윤석열 전 대통령에 사형 구형... 2월 19일 '운명의 날'"
 date: "2026-01-14"
 description: "검찰이 내란 수괴 혐의로 윤석열 전 대통령에게 사형을 구형했습니다. 1997년 이후 첫 사형 집행 가능성과 2월 19일 선고 전망을 분석합니다."
-tags: ["윤석열", "사형구형", "내란죄", "정치", "법률"]
+tags: 윤석열, 사형구형, 내란죄, 정치, 법률
 ---
 
-![Yoon Trial Header](yoon_trial_header_1768368024067.png)
+![Yoon Trial Header](https://raw.githubusercontent.com/jeonghun-project/general-blog/main/assets/images/2026-01-14-속보--윤석열-전-대통령에-사형-구형-2월-19일-운명의-날-yoon-trial-header-1768368024067.png)
 
 ## 📌 3줄 요약
 
