Post: 아시아 증시의 폭주: 타카이치 트레이드와 AI 반도체

--- a/_posts/2026-02-10-아시아-증시의-폭주-타카이치-트레이드와-ai-반도체.md
+++ b/_posts/2026-02-10-아시아-증시의-폭주-타카이치-트레이드와-ai-반도체.md
@@ -4,7 +4,7 @@ date: "2026-02-10"
 description: "일본 닛케이가 타카이치 트레이드로 사상 최고치를 경신했습니다. 한국 코스피도 AI 반도체를 중심으로 신고가를 눈앞에 두고 있습니다. 아시아 증시 랠리의 배경을 심층 분석합니다."
 ---
 
-![Header Image](images/header_image_asia_markets.png)
+![Header Image](https://raw.githubusercontent.com/jeonghun-project/general-blog/main/assets/images/2026-02-10-아시아-증시의-폭주-타카이치-트레이드와-ai-반도체-header-image-asia-markets-1770689412445.png)
 
 ## 1. 아시아 증시, 기록을 갈아치우다 📈
 
